# copytrade-key

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py  script.py.mako
alembic/versions/: 41c761a0fdc1_its_a_migration_innit.py
api/: router.py  validators.py
copytrading/: __init__.py  models.py  repositories.py
core/: container.py  copytrading_providers.py  logger.py  security.py
core/database/: __init__.py  providers.py
core/environment/: __init__.py  config.py  providers.py
middleware/: security.py
signing/: __init__.py  authorization_signer.py  entities.py  models.py  privy_usecases.py  providers.py  repositories.py  services.py  usecases.py
startup_scripts/: entrypoint.sh
